		 * d_trans_add_o_ and d_trans_add_b_ for additonal transport choppers
- Added: Support for boat respawn in the TT version (the var name must start with d_boat
- Added: Gas leak side mission type
- Added: New GMCWG 1.2 APCs and choppers. The GMCWG version now has lift support and a chopper MHQ
- Added: Malden TT version by Babyka
- Changed: Removed jump flags created at seized main targets in the TT version
- Changed: If disable TI or disable NVG is turned on in the server lobby launchers sight will be blocked when either NV or TI mode is used
- Changed: Enabled simulation on base flags again to show flags (if it really is a flag)
- Changed: Award points, for example points a player gets for destroying a barrack building, can now be changed in d_addscore_a array (available in initcommon.sqf and database dom_settings table). Only available in ranked and database mode
- Changed: Removed d_with_targetselect/"Players can select next main target:" and integrated it in d_with_targetselect_count/"Players can select from available targets:"
- Changed: There is now also an enemy AI vehicle MHQ at main targets in the TT version like it is in the normal coop version
- Changed: Setting d_number_attack_planes, d_number_attack_choppers, d_number_light_attack_choppers or d_number_attack_uavs to 0 in init\fn_preinit.sqf does not spawn air vehicles for the specific class
- Changed: In ranked mode bagpacks are now added to the ranks by their maximumLoad property, < 200 for all ranks, < 300 for ranks starting at sergeant, < 400 for ranks starting at major and everything above for colonel and better 
- Changed: In ranked mode vests are now added to the ranks by their maximumLoad supply property, < 101 for all ranks, < 121 for ranks starting at sergeant, < 141 for ranks starting at major and everything above for colonel and better 