@@ -6,3 +6,5 @@ STR_DOM_MISSIONSTRING_1987
 STR_DOM_MISSIONSTRING_CRASH
 STR_DOM_MISSIONSTRING_PRISONERS
 STR_DOM_MISSIONSTRING_2033
+STR_DOM_MISSIONSTRING_2034
+STR_DOM_MISSIONSTRING_2035
