@@ -66,3 +66,5 @@ STR_DOM_MISSIONSTRING_2032
 STR_DOM_MISSIONSTRING_CRASH
 STR_DOM_MISSIONSTRING_PRISONERS
 STR_DOM_MISSIONSTRING_2033
+STR_DOM_MISSIONSTRING_2034
+STR_DOM_MISSIONSTRING_2035
